<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>bot_example_tdlib</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    </properties>

    <repositories>

        <!-- Add the following repository -->
        <repository>
            <id>mchv</id>
            <name>MCHV Apache Maven Packages</name>
            <url>https://mvn.mchv.eu/repository/mchv/</url>
        </repository>

    </repositories>

    <dependencyManagement>
        <dependencies>

            <!-- Add the following dependency -->
            <dependency>
                <groupId>it.tdlight</groupId>
                <artifactId>tdlight-java-bom</artifactId>
                <version>3.0.12+td.1.8.14</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <!-- Add the following dependencies -->
        <dependency>
            <groupId>it.tdlight</groupId>
            <artifactId>tdlight-java</artifactId>
            <!-- Java 8 is supported if you use the following dependency classifier: <classifier>jdk8</classifier> -->
        </dependency>
        <dependency>
            <groupId>it.tdlight</groupId>
            <artifactId>tdlight-natives</artifactId>
            <classifier>linux_amd64_gcc_ssl1</classifier>
            <!-- don't specify the version here -->
        </dependency>
        <dependency>
            <groupId>it.tdlight</groupId>
            <artifactId>tdlight-natives</artifactId>
            <classifier>windows_amd64</classifier>
            <!-- don't specify the version here -->
        </dependency>
        <!-- Include other native classifiers, for example linux_amd64_ssl1,  linux_amd64_ssl3, macos_amd64, ... -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20230618</version>
        </dependency>


    </dependencies>

</project>